{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 30,
  "lineage": "111275a7-2909-7cf5-6e1a-0c7cb78631ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three_tier_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08062a6fe933640c0",
            "domain": "vpc",
            "id": "eipalloc-08062a6fe933640c0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-224-81.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.224.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "three_tier_nat_eip"
            },
            "tags_all": {
              "Name": "three_tier_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three_tier_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:internet-gateway/igw-0a921941e2bec6bd1",
            "id": "igw-0a921941e2bec6bd1",
            "owner_id": "339712996015",
            "tags": {
              "Name": "three_tier_IG"
            },
            "tags_all": {
              "Name": "three_tier_IG"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three_tier_web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:loadbalancer/app/three-tier-web-lb/b5db6ee98fabecb4",
            "arn_suffix": "app/three-tier-web-lb/b5db6ee98fabecb4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-web-lb-1401386630.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:loadbalancer/app/three-tier-web-lb/b5db6ee98fabecb4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00596b4513b197609"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0283cd5607d6059f4"
              },
              {
                "subnet_id": "subnet-0718844050ce99c8d"
              }
            ],
            "subnets": [
              "subnet-0283cd5607d6059f4",
              "subnet-0718844050ce99c8d"
            ],
            "tags": {
              "Environment": "three_tier_web_lg"
            },
            "tags_all": {
              "Environment": "three_tier_web_lg"
            },
            "vpc_id": "vpc-07aa96db0991e2293",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.web_lb_sg",
            "aws_subnet.pub_sub_1",
            "aws_subnet.pub_sub_2",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three_tier_web_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:listener/app/three-tier-web-lb/b5db6ee98fabecb4/8adb128c0477e5d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:targetgroup/three-tier-web-lb-tg/f5dd2b29f950dcfe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:listener/app/three-tier-web-lb/b5db6ee98fabecb4/8adb128c0477e5d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:loadbalancer/app/three-tier-web-lb/b5db6ee98fabecb4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three_tier_web_lb",
            "aws_lb_target_group.three_tier_web_lb_tg",
            "aws_security_group.web_lb_sg",
            "aws_subnet.pub_sub_1",
            "aws_subnet.pub_sub_2",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three_tier_web_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:targetgroup/three-tier-web-lb-tg/f5dd2b29f950dcfe",
            "arn_suffix": "targetgroup/three-tier-web-lb-tg/f5dd2b29f950dcfe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712996015:targetgroup/three-tier-web-lb-tg/f5dd2b29f950dcfe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three_tier_nat_gateway_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08062a6fe933640c0",
            "association_id": "eipassoc-076bfb8461db4c976",
            "connectivity_type": "public",
            "id": "nat-0d0b3372583d687b4",
            "network_interface_id": "eni-08bea30b7f897a248",
            "private_ip": "10.0.0.5",
            "public_ip": "3.111.224.81",
            "subnet_id": "subnet-0718844050ce99c8d",
            "tags": {
              "Name": "three_tier_nat_gateway_01"
            },
            "tags_all": {
              "Name": "three_tier_nat_gateway_01"
            }
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_app_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:route-table/rtb-0cccca36ab8a7d1ff",
            "id": "rtb-0cccca36ab8a7d1ff",
            "owner_id": "339712996015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0b3372583d687b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three_tier_app_RT"
            },
            "tags_all": {
              "Name": "three_tier_app_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_nat_gateway.three_tier_nat_gateway_01",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_web_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:route-table/rtb-0c095f96fd5b3203c",
            "id": "rtb-0c095f96fd5b3203c",
            "owner_id": "339712996015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a921941e2bec6bd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three_tier_web_RT"
            },
            "tags_all": {
              "Name": "three_tier_web_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three_tier_IG",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_app_RT_private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c80071fc12fe3cc8",
            "route_table_id": "rtb-0cccca36ab8a7d1ff",
            "subnet_id": "subnet-089ae14dfb79206da"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_nat_gateway.three_tier_nat_gateway_01",
            "aws_route_table.three_tier_app_RT",
            "aws_subnet.privat_sub_1",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_app_RT_private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec0f44ede20dd8f0",
            "route_table_id": "rtb-0cccca36ab8a7d1ff",
            "subnet_id": "subnet-0903142c07d7064cc"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_nat_gateway.three_tier_nat_gateway_01",
            "aws_route_table.three_tier_app_RT",
            "aws_subnet.privat_sub_2",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_app_RT_private_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0500e46cef61cc9ab",
            "route_table_id": "rtb-0cccca36ab8a7d1ff",
            "subnet_id": "subnet-00b391b91099e8658"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_nat_gateway.three_tier_nat_gateway_01",
            "aws_route_table.three_tier_app_RT",
            "aws_subnet.privat_sub_3",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_app_RT_private_sub_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044543f383093962e",
            "route_table_id": "rtb-0cccca36ab8a7d1ff",
            "subnet_id": "subnet-079b16ba67d71b1d4"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_internet_gateway.three_tier_IG",
            "aws_nat_gateway.three_tier_nat_gateway_01",
            "aws_route_table.three_tier_app_RT",
            "aws_subnet.privat_sub_4",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_web_RT_pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b8c3555424bb3cf",
            "route_table_id": "rtb-0c095f96fd5b3203c",
            "subnet_id": "subnet-0718844050ce99c8d"
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_IG",
            "aws_route_table.three_tier_web_RT",
            "aws_subnet.pub_sub_1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_web_RT_pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09253faee63b45510",
            "route_table_id": "rtb-0c095f96fd5b3203c",
            "subnet_id": "subnet-0283cd5607d6059f4"
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_IG",
            "aws_route_table.three_tier_web_RT",
            "aws_subnet.pub_sub_2",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:security-group/sg-00b687ebc4fe9e0a2",
            "description": "Allow traffic to DB from App Layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b687ebc4fe9e0a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow MySQL traffic from App Layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "339712996015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_sg"
            },
            "tags_all": {
              "Name": "db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:security-group/sg-0a09f113a81d5cdcd",
            "description": "Allow inbound traffic for web and app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a09f113a81d5cdcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTP traffic from Web Layer to App Layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_sg",
            "name_prefix": "",
            "owner_id": "339712996015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three_tier_sg"
            },
            "tags_all": {
              "Name": "three_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:security-group/sg-00596b4513b197609",
            "description": "Allow traffic to Load Balancer from web clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00596b4513b197609",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_lb_sg",
            "name_prefix": "",
            "owner_id": "339712996015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_lb_sg"
            },
            "tags_all": {
              "Name": "web_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-089ae14dfb79206da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089ae14dfb79206da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat_sub_1"
            },
            "tags_all": {
              "Name": "privat_sub_1"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-0903142c07d7064cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0903142c07d7064cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat_sub_2"
            },
            "tags_all": {
              "Name": "privat_sub_2"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-00b391b91099e8658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b391b91099e8658",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat_sub_3"
            },
            "tags_all": {
              "Name": "privat_sub_3"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_sub_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-079b16ba67d71b1d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b16ba67d71b1d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat_sub_4"
            },
            "tags_all": {
              "Name": "privat_sub_4"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-0718844050ce99c8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0718844050ce99c8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1"
            },
            "tags_all": {
              "Name": "pub_sub_1"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:subnet/subnet-0283cd5607d6059f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0283cd5607d6059f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712996015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2"
            },
            "tags_all": {
              "Name": "pub_sub_2"
            },
            "vpc_id": "vpc-07aa96db0991e2293"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712996015:vpc/vpc-07aa96db0991e2293",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d1ee6858206c63e",
            "default_route_table_id": "rtb-0e1cd457eb5dd9932",
            "default_security_group_id": "sg-0b31c53a77dd44c03",
            "dhcp_options_id": "dopt-03d59966688b91bac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07aa96db0991e2293",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1cd457eb5dd9932",
            "owner_id": "339712996015",
            "tags": {
              "Name": "three_tier_vpc"
            },
            "tags_all": {
              "Name": "three_tier_vpc"
            }
          }
        }
      ]
    }
  ]
}